--- a/build.gradle
+++ b/build.gradle
@@ -16,20 +16,14 @@ subprojects {
 
     dependencies {
         // Spring
-        implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
-        implementation 'org.springframework.boot:spring-boot-configuration-processor:2.7.5'
-        // Tracing
-        implementation 'io.opentelemetry:opentelemetry-api:1.24.0'
-        implementation 'io.opentelemetry:opentelemetry-sdk:1.24.0'
-        implementation 'io.opentelemetry:opentelemetry-exporter-jaeger:1.24.0'
-        implementation 'io.opentelemetry:opentelemetry-exporter-jaeger-thrift:1.24.0'
-        implementation 'io.opentelemetry:opentelemetry-semconv:1.24.0-alpha'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-configuration-processor'
         // Utils
         implementation 'com.google.guava:guava:31.1-jre'
         implementation 'org.apache.commons:commons-lang3:3.12.0'
         implementation 'org.apache.commons:commons-collections4:4.4'
         // Testing
-        testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
         testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
         testImplementation 'org.mockito:mockito-core:4.8.0'
