--- a/micrometer/build.gradle
+++ b/micrometer/build.gradle
@@ -1,19 +1,47 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '3.0.4'
 }
 apply plugin: 'io.spring.dependency-management'
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
 
 group 'eu.malycha'
 version '0.0.1-SNAPSHOT'
 
 dependencies {
+    // Spring
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     // Tracing
     implementation 'org.springframework.boot:spring-boot-actuator'
     implementation 'org.springframework.boot:spring-boot-actuator-autoconfigure'
     implementation 'io.micrometer:micrometer-tracing'
     //implementation 'io.micrometer:micrometer-tracing-bridge-otel'
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-
+    // Utils
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    // Testing
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
+    // Tracing testing
     testImplementation 'io.micrometer:micrometer-observation-test'
     testImplementation 'io.micrometer:micrometer-tracing-test'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+test {
+    useJUnitPlatform()
 }
