--- a/quarkus/build.gradle
+++ b/quarkus/build.gradle
@@ -10,13 +10,15 @@ repositories {
 
 dependencies {
     implementation enforcedPlatform("io.quarkus.platform:quarkus-bom:2.16.5.Final")
-    implementation enforcedPlatform("io.quarkus.platform:quarkus-camel-bom:2.16.5.Final")
+    //implementation enforcedPlatform("io.quarkus.platform:quarkus-camel-bom:2.16.5.Final")
     implementation 'io.quarkus:quarkus-micrometer-registry-prometheus'
     implementation 'io.quarkus:quarkus-opentelemetry'
-    implementation 'org.apache.camel.quarkus:camel-quarkus-rabbitmq'
+    //implementation 'org.apache.camel.quarkus:camel-quarkus-rabbitmq'
     implementation 'io.quarkus:quarkus-micrometer'
+    implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'io.quarkus:quarkus-arc'
     testImplementation 'io.quarkus:quarkus-junit5'
+    testImplementation 'io.rest-assured:rest-assured'
 }
 
 group 'eu.malycha'
