Attached custom OpenTelemetry bean

--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.application.name=zipkin-poc
 quarkus.http.port=8081
 
-quarkus.opentelemetry.enabled=true
+quarkus.opentelemetry.enabled=false
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
