Added full messaging layer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.7'
 services:
+  rabbit:
+    image: rabbitmq:3.9-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - jaeger-example
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
