--- a/quarkus/src/main/resources/application.properties
+++ b/quarkus/src/main/resources/application.properties
@@ -7,3 +7,27 @@ quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 quarkus.http.access-log.pattern="...traceId=%{X,traceId} spanId=%{X,spanId}"
+
+rabbitmq-host=localhost
+rabbitmq-port=5672
+
+mp.messaging.incoming.client.connector=smallrye-rabbitmq
+mp.messaging.incoming.client.queue.name=client-queue
+
+mp.messaging.outgoing.client-outgoing.connector=smallrye-rabbitmq
+mp.messaging.outgoing.client-outgoing.exchange.declare=false
+mp.messaging.outgoing.client-outgoing.exchange.name=client
+
+mp.messaging.incoming.oems.connector=smallrye-rabbitmq
+mp.messaging.incoming.oems.queue.name=oems-queue
+
+mp.messaging.outgoing.oems-outgoing.connector=smallrye-rabbitmq
+mp.messaging.outgoing.oems-outgoing.exchange.declare=false
+mp.messaging.outgoing.oems-outgoing.exchange.name=oems
+
+mp.messaging.incoming.venue.connector=smallrye-rabbitmq
+mp.messaging.incoming.venue.queue.name=venue-queue
+
+mp.messaging.outgoing.venue-outgoing.connector=smallrye-rabbitmq
+mp.messaging.outgoing.venue-outgoing.exchange.declare=false
+mp.messaging.outgoing.venue-outgoing.exchange.name=venue
