--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,25 +32,39 @@ services:
     image: jaegertracing/all-in-one:latest
     command:
       - "--cassandra.keyspace=jaeger_v1_dc1"
+      - "--query.ui-config=/etc/jaeger/jaeger-ui.json"
     ports:
-      - "4317:4317" # OTLP gRPC
-      - "4318:4318" # OTLP HTTP
       - "16686:16686" # UI
       - "14268:14268" # jaeger.thrift
       - "14250:14250" # model.proto
     environment:
-      - COLLECTOR_OTLP_ENABLED=true
       - JAEGER_DISABLED=true # disable jaeger-query traces
       - LOG_LEVEL=debug
       - SPAN_STORAGE_TYPE=cassandra
       - CASSANDRA_SERVERS=cassandra
       - METRICS_STORAGE_TYPE=prometheus
       - PROMETHEUS_SERVER_URL=http://prometheus:7300
+    volumes:
+      - "./jaeger/jaeger-ui.json:/etc/jaeger/jaeger-ui.json"
     networks:
       - jaeger-example
     restart: on-failure
     depends_on:
       - cassandra-schema
+
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:latest
+    command: "--config /etc/otelcol/otel-collector-config.yaml"
+    volumes:
+      - "./jaeger/otel-collector-config.yaml:/etc/otelcol/otel-collector-config.yaml"
+    ports:
+      - "4317:4317"
+      - "8889:8889"
+    networks:
+      - jaeger-example
+    depends_on:
+      - jaeger
+
 
   zipkin:
     image: openzipkin/zipkin
